--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hardhat": "^2.22.10"
   },
   "dependencies": {
+    "alchemy-sdk": "^3.4.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2"
   }
