--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.10",
     "@nomicfoundation/ignition-core": "^0.15.0",
     "@typechain/ethers-v6": "^0.5.0",
     "hardhat": "^2.22.10"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@typechain/hardhat": "^9.1.0",
     "alchemy-sdk": "^3.4.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2"
